
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int u64 ;
struct sockaddr_ib {void* sib_sid_mask; void* sib_sid; } ;
struct sockaddr {int dummy; } ;
struct TYPE_2__ {scalar_t__ ps; } ;
struct rdma_id_private {TYPE_1__ id; } ;
typedef enum rdma_ucm_port_space { ____Placeholder_rdma_ucm_port_space } rdma_ucm_port_space ;


 int RDMA_IB_IP_PS_IB ;
 int RDMA_IB_IP_PS_MASK ;
 int RDMA_IB_IP_PS_TCP ;
 int RDMA_IB_IP_PS_UDP ;
 scalar_t__ RDMA_PS_IB ;
 scalar_t__ RDMA_PS_TCP ;
 scalar_t__ RDMA_PS_UDP ;
 int be64_to_cpu (void*) ;
 int cma_port (struct sockaddr*) ;
 scalar_t__ cma_src_addr (struct rdma_id_private*) ;
 void* cpu_to_be64 (int) ;
 int ntohs (int ) ;

__attribute__((used)) static enum rdma_ucm_port_space
cma_select_ib_ps(struct rdma_id_private *id_priv)
{
 enum rdma_ucm_port_space ps = 0;
 struct sockaddr_ib *sib;
 u64 sid_ps, mask, sid;

 sib = (struct sockaddr_ib *) cma_src_addr(id_priv);
 mask = be64_to_cpu(sib->sib_sid_mask) & RDMA_IB_IP_PS_MASK;
 sid = be64_to_cpu(sib->sib_sid) & mask;

 if ((id_priv->id.ps == RDMA_PS_IB) && (sid == (RDMA_IB_IP_PS_IB & mask))) {
  sid_ps = RDMA_IB_IP_PS_IB;
  ps = RDMA_PS_IB;
 } else if (((id_priv->id.ps == RDMA_PS_IB) || (id_priv->id.ps == RDMA_PS_TCP)) &&
     (sid == (RDMA_IB_IP_PS_TCP & mask))) {
  sid_ps = RDMA_IB_IP_PS_TCP;
  ps = RDMA_PS_TCP;
 } else if (((id_priv->id.ps == RDMA_PS_IB) || (id_priv->id.ps == RDMA_PS_UDP)) &&
     (sid == (RDMA_IB_IP_PS_UDP & mask))) {
  sid_ps = RDMA_IB_IP_PS_UDP;
  ps = RDMA_PS_UDP;
 }

 if (ps) {
  sib->sib_sid = cpu_to_be64(sid_ps | ntohs(cma_port((struct sockaddr *) sib)));
  sib->sib_sid_mask = cpu_to_be64(RDMA_IB_IP_PS_MASK |
      be64_to_cpu(sib->sib_sid_mask));
 }
 return ps;
}
